Rip out dependency on LibX, cleanup registry